syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetesmicroservice.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetesmicroservice/v1/spec.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetesmicroservice/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//microservice-kubernetes
message KubernetesMicroservice {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesMicroservice'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesMicroserviceSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesMicroserviceStatus status = 5;
}

//microservice-kubernetes-status
message KubernetesMicroserviceStatus {
  //stack-outputs
  KubernetesMicroserviceStackOutputs outputs = 1;
}
